sandbox/output
MedicineClash.java:32: error: <identifier> expected
        LocalDate startA = customer.medicines.get(0).;
                                                     ^
1 error
